fixed shadow box

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
       </p>
     </header>
     <main>
-      <section class="left">
-        <div class="feature">
+      <section class="">
+        <div class="feature supervisor">
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
           <img src="images/icon-supervisor.svg.svg" alt="Supervisor" />
         </div>
       </section>
       <section class="center">
-        <div class="feature">
+        <div class="feature team-builder">
           <h3>Team Builder</h3>
           <p>
             Scans our talent network to create the optimal team for your project
           </p>
           <img src="images/icon-team-builder.svg" alt="Team Builder" />
         </div>
-        <div class="feature">
+        <div class="feature karma">
           <h3>Karma</h3>
           <p>Regularly evaluates our talent to ensure quality</p>
           <img src="images/icon-karma.svg.svg" alt="Karma" />
         </div>
       </section>
-      <section class="right">
-        <div class="feature">
+      <section class="">
+        <div class="feature calculator">
           <h3>Calculator</h3>
           <p>
             Uses data from past projects to provide better delivery estimates
